--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+footer h3 {
+  color: #000000;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  margin-bottom: 16px;
+}
+
+footer a {
+  color: #616161;
+  font-size: 16px;
+  line-height: 24px;
+  display: block;
+  text-decoration: none;
+  margin-bottom: 16px;
+}
+
 body {
   font-family: "Gilroy", sans-serif;
 }
@@ -11,8 +28,7 @@ img {
 }
 
 footer {
-  position: relative;
-  top: 0;
+  padding: 80px 0 50px 0;
 }
 
 .container {
@@ -20,39 +36,107 @@ footer {
   margin: 0 auto;
 }
 
-.container::before {
-  width: 100%;
-  height: 100%;
-  content: "";
-  position: absolute;
-  background: url(../img/container_before.svg);
-  background-repeat: no-repeat;
-}
-
 .footer_flex {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 80px 0 50px 0;
 }
 
 .about {
   max-width: 249px;
 }
 
-.account {
-  max-width: 93px;
-}
-
-.connected {
-  max-width: 180px;
-}
-
-.updated {
-  max-width: 292px;
+.about p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #616161;
+  margin-bottom: 16px;
 }
 
 nav {
   display: flex;
   flex-direction: column;
+}
+
+nav a {
+  font-weight: 500;
+}
+
+.updated input {
+  margin-right: 4px;
+  padding: 13px;
+  border: 0;
+  background: #F4F5F7;
+}
+
+.updated::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.updated button {
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1440px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 980px;
+  }
+  .updated input {
+    width: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+  footer a {
+    margin-bottom: 10px;
+  }
+  footer h3 {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .container {
+    max-width: 380px;
+  }
+  footer a {
+    margin-bottom: 8px;
+  }
+  footer h3 {
+    margin-bottom: 8px;
+  }
+  .footer_flex div {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .container {
+    max-width: 320px;
+  }
+  .footer_flex div {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    max-width: 280px;
+  }
+  .footer_flex div {
+    min-width: 280px;
+    margin-bottom: 15px;
+  }
 }
