--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,7 +1,7 @@
+@import _variables
 
 body 
     font-family: "Gilroy", sans-serif
-
 
 h1, h2, h3, p 
     margin: 0
@@ -10,44 +10,49 @@ img
     vertical-align: middle
 
 footer
-    position: relative
-    top: 0
-        
+    padding: 80px 0 50px 0
+
+footer a
+    @extend %styles-footer-a
+    
+footer h3
+    @extend %styles-footer-h3
+
 .container 
     width: 1237px
     margin: 0 auto
-    
-    &::before
-        width: 100%
-        height: 100%
-        content: ""
-        position: absolute
-        background: url(../img/container_before.svg)
-        background-repeat: no-repeat
-   
 
 .footer_flex
     display: flex
     flex-wrap: wrap
-    justify-content: space-between
-    padding: 80px 0 50px 0 
+    justify-content: space-between 
 
 .about
     max-width: 249px
-
-.menu
-    // max-width: 104px
-
-
-.account
-    max-width: 93px
-
-.connected
-    max-width: 180px
-
-.updated
-    max-width: 292px
+    p
+        font-size: 16px
+        line-height: 24px
+        color: #616161
+        margin-bottom: $margin-bottom-h3
 
 nav
     display: flex
     flex-direction: column
+    a
+        font-weight: 500
+
+.updated 
+    input
+        margin-right: 4px 
+        padding: 13px
+        border: 0
+        background: #F4F5F7
+    &::placeholder
+        font-weight: 400
+        font-size: 16px
+    button
+        border: 0
+        padding: 0
+        cursor: pointer
+
+@import _media
